[package]
name = "metis-erc20"
version = "0.1.0"
authors = ["Fan Yang"]
edition = "2018"

[dependencies]
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false, features = ["i128"] }

metis-contract = { path = "../../../utils/contract/", default-features = false }

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_metadata/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std",
    "metis-contract/std"
]
ink-as-dependency = []
