[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "timelock_controller"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", default-features = false}
ink_lang = {version = "3.0.0-rc5", default-features = false}
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", default-features = false}
ink_primitives = {version = "3.0.0-rc5", default-features = false}
ink_storage = {version = "3.0.0-rc5", default-features = false}

hex = {version = "0.4", default-features = false}
num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"], optional = true}

metis_access_control = {path = "../../../../crates/components/access/control", default-features = false}
metis_lang = {path = "../../../../crates/lang", default-features = false}
metis_timelock_controller = {path = "../../../../crates/components/governance/timelock-controller", default-features = false}

[lib]
crate-type = [
  "cdylib",
  "rlib",
] # Used for ABI generation.
name = "timelock_controller"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",
  "metis_lang/std",
  "metis_timelock_controller/std",
]
