[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "erc20_pausable"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_metadata = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_primitives = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_storage = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}

num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"], optional = true}

metis_erc20 = {path = "../../../../crates/components/token/erc20", default-features = false}
metis_lang = {path = "../../../../crates/lang", default-features = false}
metis_ownable = {path = "../../../../crates/components/access/ownable", default-features = false}
metis_pausable = {path = "../../../../crates/components/security/pausable", default-features = false}

[lib]
crate-type = [
  "cdylib",
  "rlib",
] # Used for ABI generation.
name = "erc20_pausable"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info",
  "scale-info/std",
  "metis_lang/std",
  "metis_erc20/std",
  "metis_ownable/std",
  "metis_pausable/std",
]
